<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Epic 4G Settings</string>

    <!-- Page Headers -->
    <string name="general_title">GENERAL</string>

    <string name="category_touchkey_title">Capacitive Buttons</string>
    <string name="touchkey_led_title_head">Disable Touchkey Lights</string>
    <string name="touchkey_led_summary_head">The capacitive touchkey backlights will not light after timeout unless pressed.</string>
    <string name="touchkey_led_toast_message">Preference change will take effect after the screen is turned off and on.</string>

    <string name="touchkey_brightness_title_head">Touchkey Brightness</string>
    <string name="touchkey_brightness_summary_head">Set the brightness of the capacitive touchkey backlights.</string>
    <string name="touchkey_brightness_toast_message">Resetting the touch controller.  Please wait...</string>

    <string name="category_dock_title">Dock</string>
    <string name="dockaudio_subcat_title">DOCK AUDIO</string>
    <string name="use_dock_audio_title_head">Use Dock USB Audio</string>
    <string name="use_dock_audio_summary_head">Use the passive audio out on the dock</string>

</resources>
