<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General settings -->

    <!-- Capacitive touchkey backlight disable -->
    <PreferenceCategory android:key="category_touchkey"
        android:title="@string/category_touchkey_title">
        <CheckBoxPreference android:key="touchkey_led"
            android:title="@string/touchkey_led_title_head"
            android:summary="@string/touchkey_led_summary_head" />

        <ListPreference android:key="touchkey_brightness"
            android:title="@string/touchkey_brightness_title_head"
            android:summary="@string/touchkey_brightness_summary_head"
            android:entries="@array/touchkey_brightness_entries"
                android:entryValues="@array/touchkey_brightness_values"
                android:defaultValue="3000000" />

    </PreferenceCategory>

</PreferenceScreen>
